@@ -1,5 +1,5 @@
 name    = Brannigan
-version = 0.7
+version = 0.8
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
